<resources>
    <string name="app_name">Female Home Workout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Female Home Workout</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="sett_reminder_header">Set Reminder</string>
    <string name="sett_reminder_label">Remind Me</string>
    <string name="sett_reminder_desc">We will remind you daily basis</string>
    <string name="sett_reminder_time_label">Set Reminder Time</string>
    <string name="sett_reminder_time_content">8 : 00 PM</string>


    <!-- setting activity-->

    <string name="pref_header_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="summary_privacy">Read our privacy policy</string>
    <string name="summary_invite_friends">Share with Your Friends</string>
    <string name="summary_reminder">Set reminder to reminde workout every day</string>
    <string name="summary_restart_progress">Reset all your progress</string>
    <string name="summary_delete_alldata">Complete resets all settings</string>
    <string name="title_version">Version</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_send_invite">Invite Friends</string>
    <string name="title_privacy">Privacy Policy</string>
    <string name="title_set_reminder">Set Reminder</string>
    <string name="title_delete_data">Delete All Data</string>
    <string name="title_restart_progress">Restart Progress</string>
    <string name="title_Rate_us">Rate Us</string>
    <string name="summary_rate_us">Rate Us on Play Store</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="key_rate_us">key_rate_us</string>
    <string name="key_set_reminder">key_set_reminder</string>
    <string name="key_restart_progress">key_restart_progress</string>
    <string name="key_delete_alldata">key_delete_alldata</string>
    <string name="key_invite_friends">key_invite_friends</string>
    <string name="key_privacy">key_privacy</string>
    <string name="choose_email_client">Choose email client</string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="url_faq">https://web.whatsapp.com/</string>


    <!-- for real-->

    <!--   <string name="ApAdId">ca-app-pub-2953492676760965~8429074653</string>
       <string name="interstitialunitid">ca-app-pub-2953492676760965/3218956489</string>
       <string name="bannerunitid">ca-app-pub-2953492676760965/5802911313</string>
       <string name="nativeid">ca-app-pub-2953492676760965/6461386860</string>-->


    <!--for test-->

    <string name="ApAdId">ca-app-pub-3940256099942544~3347511713</string>
    <string name="interstitialunitid">ca-app-pub-3940256099942544/1033173712</string>
    <string name="bannerunitid">ca-app-pub-3940256099942544/6300978111</string>
    <string name="nativeid">ca-app-pub-3940256099942544/2247696110</string>
</resources>
